# OtbDatTransformata

./: .gitignore  CMakeLists.txt  FrameGroup.h  ItemType.cpp  ItemType.h  Items.cpp  Items.h  README.md  globals.h  main.cpp  settings.h  settings.toml  tools.h
Compilers/: DatCompiler.cpp  DatCompiler.h  MetadataFlags6.h  MetadataReader.h  MetadataWriter.h  MetadataWriter6.h  ThingCategory.h
Loaders/: ClientIdToServerIdMap.h  DatAttributes.h  DatLoader.cpp  DatLoader.h  OtbLoader.cpp  OtbLoader.h  PluginMain.h  PluginThree.cpp  PluginThree.h  fileLoader.cpp  fileLoader.h  itemLoader_enums.h
